--- a/css/main/myimage.css
+++ b/css/main/myimage.css
@@ -3,26 +3,21 @@
     width: 200px; /* Adjust as needed */
     height: 200px; /* Adjust as needed */
     object-fit: cover;
-    margin-left: 50px;
+    margin-left: 50px; /* Default margin, overridden in media query */
     cursor: pointer;
     position: absolute;
+    bottom: 100%; /* Anchor at the bottom of the container */
+    right: 0; /* Anchor at the right of the container */
+    left: 0; /* Center horizontally */
+    margin: 0 auto; /* Center horizontally */
 }
-
 
 @media (max-width: 600px) {
     #myImage {
-        position: static; /* Resets position to flow naturally within the document */
+        position: absolute; /* Resets position to flow naturally within the document */
         width: 200px; /* Adjusts width to fit the container */
         height: auto; /* Keeps the aspect ratio of the image */
         margin: 0 auto; /* Centers the image */
         display: block; /* Ensures the image is treated as a block-level element */
     }
-}
-
-#myImage {
-    position: absolute;
-    bottom: 100%; /* Example: Anchor at the bottom of the container */
-    right: 0; /* Example: Anchor at the right of the container */
-    left: 0; /* Example: Center horizontally */
-    margin: 0 auto; /* Center horizontally */
 }
