--- a/css/main/minilogos.css
+++ b/css/main/minilogos.css
@@ -30,7 +30,7 @@
         position: absolute; /* Adjust position for better responsiveness */
         margin: 20px auto; /* Center the logos horizontally and add some vertical space */
         flex-wrap: wrap; /* Allow logos to wrap if there's not enough space */
-        display: none; /* Hide the mini logos initially */
+        display: none; /* Hide the mini logos initially hm*/
         top: 60%; /* position mini logos just below the header */
     }
 
