--- a/css/about_me/about_me.css
+++ b/css/about_me/about_me.css
@@ -7,6 +7,7 @@ body { /* This is the body selector */
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-left: 60px; /* Adjust padding as needed */
 }
 
 body { /* This is the font */
