--- a/css/main/minilogos.css
+++ b/css/main/minilogos.css
@@ -23,6 +23,22 @@
     margin-right: 50px; /* This adds 50px of space to the right of each image */
 }
 
+#mini_logos img:hover {
+    animation: pop 0.5s forwards;
+}
+
+@keyframes pop {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
 /* Add this media query for phone screens */
 @media (max-width: 600px) {
     #mini_logos {
@@ -41,5 +57,3 @@
         margin-bottom: 20px; /* Add some space below each logo for when they wrap */
     }
 }
-
-/* Testing if updated or not? */
