--- a/css/about_me/about_me.css
+++ b/css/about_me/about_me.css
@@ -21,3 +21,11 @@ body {
     font-size: 16px; /* Base font size */
     color: #333; /* Default text color */
 }
+
+.about_me_main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
