--- a/css/about_me/column.css
+++ b/css/about_me/column.css
@@ -1,16 +1,14 @@
 .column {
-    float: left; /* This can be removed since we're using flexbox for layout */
-    width: 600px; /* Adjust the width to fit two columns side by side */
-    display: flex;
-    flex-direction: column;
+    width: 100%; /* Full width of the container */
+    max-width: 960px; /* Maximum width the column can stretch to */
+    display: block; /* Ensures the content within each column is displayed in block layout */
     border: 2px solid #585858;
-    margin: 10px; /* Adjust margin as needed, ensuring total width doesn't exceed 100% */
-    padding: 20px; /* Add padding for spacing inside the columns */
+    margin: 1000px auto; /* Increased top margin for larger gaps and auto margins on the sides to center the column */
+    padding: 20px; /* Padding inside the columns */
 }
 
 .row {
-    display: flex; /* This aligns the child .column elements side by side */
-    flex-wrap: wrap; /* Allows columns to wrap to the next line on smaller screens */
+    display: block; /* Stacks the child .column elements vertically */
 }
 
 .row:after {
