--- a/css/about_me/navbar_title.css
+++ b/css/about_me/navbar_title.css
@@ -35,8 +35,9 @@
 }
 
 body {
+    background-color: #fff; /* Default to light theme background color */
+    color: #000; /* Default to light theme text color */
     transition: background-color 1s ease, color 0.5s ease;
-    /* Add other properties you want to transition smoothly */
 }
 
 /* Define your dark-theme and light-theme classes (or however you're toggling themes) */
@@ -49,10 +50,6 @@ body.light-theme {
     background-color: #fff; /* Light theme background color */
     color: #000; /* Black text color */
     /* Add other properties for the light theme */
-}
-
-body.dark-theme #navbar {
-    background-color: #000000; /* Slightly lighter shade for the navbar */
 }
 
 body.dark-theme .about_me_logo {
