style: Update about_me.html to include display block for navbar items

--- a/css/about_me/nav_bar.css
+++ b/css/about_me/nav_bar.css
@@ -74,5 +74,6 @@ body.light-theme #navbar {
     .navbar-item {
         padding: 15px;
         font-size: 1.2em;
+        display: block;
     }
 }
