style: Update dark theme background color in nav_bar.css

--- a/css/about_me/nav_bar.css
+++ b/css/about_me/nav_bar.css
@@ -29,7 +29,7 @@
 }
 
 body.dark-theme #navbar {
-    background-color: #0000005b; /* Slightly lighter shade for the dark theme */
+    background-color: #171a1e; /* Slightly lighter shade for the dark theme */
 }
 
 body.light-theme #navbar {
