--- a/css/main/h1.css
+++ b/css/main/h1.css
@@ -23,7 +23,7 @@ h1 {
     border-right: .15em solid orange; /* The cursor */
     animation: typing 1s steps(100, end), forwards, blink-caret .75s step-end infinite;
     max-width: 100%;
-    
+    margin-top: 200px;
 }
 
 
