--- a/css/main/minilogos.css
+++ b/css/main/minilogos.css
@@ -8,8 +8,8 @@
 
 #mini_logos {
     position: absolute; /* set position of mini logos to absolute */
-    top: 60%; /* position mini logos just below the header */
-    left: 0; /* align mini logos to the left */
+    top: 30px; /* position mini logos just below the header */
+    left: 100px; /* align mini logos to the left */
     right: 0; /* align mini logos to the right */
     display: none; /* hide the mini logos initially */
     justify-content: center;
@@ -20,7 +20,7 @@
 #mini_logos img {
     width: 50px; /* adjust as needed */
     height: 50px; /* adjust as needed */
-    margin-right: 50px; /* This adds 50px of space to the right of each image */
+    margin-right: 100px; /* This adds 50px of space to the right of each image */
 }
 
 #mini_logos img:hover {
@@ -39,7 +39,7 @@
     }
 }
 
-/* Add this media query for phone screens */
+/* Adjustment for mobile */
 @media (max-width: 600px) {
     #mini_logos {
         display: flex; /* Make mini logos visible on small screens */
