--- a/css/main/h1.css
+++ b/css/main/h1.css
@@ -24,7 +24,15 @@ h1 {
     animation: typing 1s steps(100, end), forwards, blink-caret .75s step-end infinite;
     max-width: 100%;
     margin-top: 200px;
+    /* animation hover adjust psst: dont forget check myimage.js*/
+    transition: transform 0.5s ease; /* Add this line to enable smooth movement */
 }
+
+#myImage:hover + #title {
+    /* #title adjust y-axis base on the image size */
+    transform: translateY(20px); /* Adjust the value as needed */
+}
+
 
 
 /* Typing animation */
