style: Update font-family in about_me.css for better readability

--- a/css/about_me/about_me.css
+++ b/css/about_me/about_me.css
@@ -4,6 +4,7 @@ html, body {
 }
 
 body { /* This is the body selector */
+    font-family: 'Open Sans', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
