--- a/css/about_me/about_me.css
+++ b/css/about_me/about_me.css
@@ -1,6 +1,10 @@
 html, body {
     height: 100%;
-    margin: 0;
+    margin: auto;
+    h1, h2, h3, h4, h5, h6 {
+        font-family: 'Open Sans', sans-serif;
+        text-wrap: balance;
+    }
 }
 
 body { /* This is the body selector */
@@ -9,6 +13,9 @@ body { /* This is the body selector */
     flex-direction: column;
     align-items: center;
     padding-left: 60px; /* Adjust padding as needed */
+    max-width: clamp(320px, 90%, 1200px);
+    line-height: 1.5;
+    font-size: 1.25rem;
 }
 
 .about_me_main {
